Newly modified css

--- a/Trust/Edulife/templates/Footer.html
+++ b/Trust/Edulife/templates/Footer.html
@@ -1,4 +1,7 @@
+
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,16 +12,18 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container-sm">
   <footer class="py-3 my-4">
 
     <div class="nav justify-content-center">
-      <div class="contact text-center" style="font-family: Arial; color: #148299;" >
+      <div class="contact text-center" style="font-family: Arial; color: #148299; font-size: 22px;" >
       <a>CONTACT: 8110044405-BALU | 8220144405-RK | 6379024252-ASWIN |
         8098844405-SURENDER <br/> 8778168632 - SUDAGAR</a>
         </div>
+
      <p class="nav-item bi bi-geo-alt-fill" style="font-size: 15px; font-weight: bold;">&nbspAR Complex, 1st Floor, Opp to Abirami Hospital, Sundarapuram
       Coimbatore -641024.</p>
+
 
     </div>
     <div class="mail text-center ">
@@ -30,7 +35,8 @@
 
 
   </footer>
-</div>
+    </div>
+
 </body>
 
 </html>
