--- a/Trust/Edulife/templates/Home.html
+++ b/Trust/Edulife/templates/Home.html
@@ -1,9 +1,12 @@
 {% load static %}
+{% include "Header.html" %}
 <!DOCTYPE html>
 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -13,39 +16,13 @@
 
 
 </head>
+
 <body>
+
 <div class="container-fluid">
-<div class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="{% static 'Tamil-logo.png' %}" >
-      </a>
-        <span class="pt-4 fs-4 custom-align">TAMILNADU EDULIFE TRUST Colleges Admision Provider</span>
 
 
-
-
-      <ul class="pt-4 nav nav-pills">
-        <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-      </ul>
-    </div>
-    </div>
-
-    <div class="container-fluid">
-       <p style="text-align:left;">
-            1500+ Universities Across | 90+ Countries | 1000+ College | 10,000,0+ Couse
-           <span style="float:right;">
-            Govt. Reg. No.: 201800007
-            </span>
-       </p>
-    </div>
-
-
-
-    <div class="row p-3 mb-2" style="background-color: #98E0EF;">
+    <div class="row container-fluid p-3 mb-2" style="background-color: #98E0EF;">
         <div class="col" >
             <h1>"Why Wait For Tomorrow  </h1>
             <h1>When You Can Built Your</h1>
@@ -59,10 +36,10 @@
 
     </div>
 
-
+        <div class="container-fluid ">
         <div class="pt-5 container border-bottom pb-3 mb-3 ">
         <div class="row align-items-md-stretch">
-      <div class="col-md-6">
+      <div class="col-sm-6 col-md-8">
         <div class="h-100 p-5 rounded-3">
           <i class="bi bi-caret-right-fill" style="font-size: 25px; color: red;"></i><a href="#">Scholarship Available</a>
         <br/><br/>
@@ -79,7 +56,7 @@
         <i class="bi bi-caret-right-fill" style="font-size: 25px; color: red;"></i><a href="#">Providing All Kinds Of Education Services In India & Abroad</a><br/><br/>
         </div>
       </div>
-      <div class="col-md-6" >
+      <div class="col-6 col-md-4" >
         <div class="h-100 p-5  border rounded-3" style="background-color: #EEEEEE;" >
           <h2>SPECIAL CAREER COUNSELING<br/> AFTER SSC / HSC
           </h2>
@@ -100,6 +77,7 @@
         </div>
       </div>
     </div>
+            </div>
             </div>
 
 
