--- a/Trust/Edulife/templates/Header.html
+++ b/Trust/Edulife/templates/Header.html
@@ -13,7 +13,7 @@
 
 <div class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="{% static 'Tamil-logo.png' %}" >
+          <img src="{% static 'newlogo.png' %}" style="width:100px;height:100px;" >
       </a>
         <span class="pt-4 fs-4 custom-align">TAMILNADU EDULIFE TRUST Colleges Admision Provider</span>
 
